Fixing horizontal Iphone and Scrollbar hidden

--- a/css/default-style.css
+++ b/css/default-style.css
@@ -1,9 +1,24 @@
+@viewport {  
+    orientation: portrait;  
+}  
+
 /* Big field selections */
 body {
     margin: 0;
     padding: 0;
     font-family: "Raleway";
     src: url("../fonts/static/Raleway-ExtraBold.ttf") format("truetype");
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 header {
